CR: Fix Error parse dom template 3 & update font pagination on mobile

--- a/plugins/DbeMotion/webroot/css/styles.scss
+++ b/plugins/DbeMotion/webroot/css/styles.scss
@@ -2154,6 +2154,10 @@ header {
     .card-list-wrapper {
       padding: 0 18px;
 
+      ul {
+        font-size: 16px;
+      }
+
       .card-list {
         width: 48%;
 
